--- a/.classpath
+++ b/.classpath
@@ -13,6 +13,6 @@
 			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/230/lib/ojdbc8-21.1.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/230/lib/ojdbc8-21.1.0.0.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
